# core-cpp

./: .gitignore  .gitmodules  DEADJOE  Main.cpp  README.md  TokenGenerationService.h  buildCode.sh  config.h  config.h.in~  configure.ac
src/: Makefile.am  arrowhead.ini  conf.h  main.cpp  service_registry
src/boot/: boot.cpp  boot.h  features.h
src/boot/traits/: Authorization.h  Authorizer.h  CertAuthority.h  Choreographer.h  DevRegistry.h  EventHandler.h  Gatekeeper.h  Gateway.h  Onboarding.h  Orchestrator.h  QosMonitor.h  ServiceRegistry.h  SysRegistry.h
src/core/: Core.h  CoreUtils.h  Dispatcher.h  DispatcherPool.h  Elements.h  ErrCodes.h
src/core/Authorizer/: Authorizer.h
src/core/CertAuthority/: CAQueries.h  CertAuthority.h
src/core/CertAuthority/endpoints/: Mgmt.h
src/core/CertAuthority/responses/: CertificatesResponse.h  KeysResponse.h  TrustedKeyCheckResponse.h
src/core/Choreographer/: Choreographer.h
src/core/DevRegistry/: DevRegistry.h
src/core/DevRegistry/abstracts/: DevRegQueries.h  DeviceQueries.h  JsonModels.h  Models.h
src/core/DevRegistry/endpoints/: DevReg.h  Device.h  DeviceName.h  Devices.h  Query.h  Register.h  UnRegister.h
src/core/DevRegistry/responses/: DevRegResponse.h  DeviceResponse.h
src/core/EventHandler/: EventHandler.h
src/core/Gatekeeper/: Gatekeeper.h
src/core/Gateway/: Gateway.h
src/core/Onboarding/: Onboarding.h
src/core/Orchestrator/: Orchestrator.h
src/core/QosMonitor/: QosMonitor.h
src/core/ServiceRegistry/: ServiceRegistry.h
src/core/ServiceRegistry/endpoints/: Register.h
src/core/ServiceRegistry/payloads/: ServiceQueryList.h  ServiceRegistryEntry.h  ServiceRegistryEntryList.h  commonPayloads.h
src/core/ServiceRegistry/utils/: DbWrapper.h  Error.h  SRJsonBuilder.h
src/core/SysRegistry/: SysRegistry.h
src/core/apps/Authorization/: Authorization.h
src/core/apps/Authorization/endpoints/: InterCloud.h  InterCloudCheck.h  IntraCloud.h  IntraCloudCheck.h  Token.h
src/core/apps/Authorization/queries/: InterCloud.h  InterCloudCheck.h  IntraCloud.h  IntraCloudCheck.h
src/core/apps/Authorization/responses/: InterCloud.h  InterCloudCheck.h  IntraCloud.h  IntraCloudCheck.h  TokenData.h
src/core/apps/Authorizer/: Authorizer.h
src/core/apps/CertAuthority/: CAUtilities.h  CertAuthority.h
src/core/apps/CertAuthority/endpoints/: Mgmt.h
src/core/apps/Choreographer/: Choreographer.h
src/core/apps/DevRegistry/: DevRegistry.h
src/core/apps/DevRegistry/endpoints/: Device.h  DeviceName.h  DeviceRegistry.h  Devices.h  Query.h  Register.h  UnRegister.h
src/core/apps/DevRegistry/models/: Device.h  (+1 more)
src/core/apps/EventHandler/: EventHandler.h
src/core/apps/Gatekeeper/: Gatekeeper.h
src/core/apps/Gateway/: Gateway.h
src/core/apps/Onboarding/: Onboarding.h
src/core/apps/Orchestrator/: Orchestrator.h
src/core/apps/QosMonitor/: QosMonitor.h
src/core/apps/ServiceRegistry/: ServiceRegistry.h
src/core/apps/SysRegistry/: SysRegistry.h
src/core/helpers/: CommonPParser.h  CoreException.h  CoreQueryStr.h  ErrorResponse.h  InvokeIf.h  ModelBuilder.h  QueryString.h
src/db/: DB.h  DBException.h  MariaDB.cpp  MariaDB.h
src/http/: HTTPServer.h  HTTPServerBuilder.cpp  HTTPServerBuilder.h  KeyProvider.h  MhttpdHandler.cpp  MhttpdHandler.hpp  ReqBuilder.h  StatusCode.h  UrlParser.h  WebGet.h
src/http/crate/: Request.h  Response.cpp  Response.h  Uri.cpp  Uri.h  X509Cert.cpp  X509Cert.h
src/http/req/: RB_Curl.cpp  RB_Curl.h
src/http/serv/: HTTPSServer.h  RequestBuffer.h  RequestParser.cpp  RequestParser.h
src/http/srv/: Header.h  Reply.cpp  Reply.h  ReplyBuffer.cpp  ReplyBuffer.h  Request.h  RequestHandler.cpp  RequestHandler.h  RequestParser.cpp  RequestParser.h
src/http/srv/iopool/: Connection.cpp  Connection.h  IOContextPool.h  Server.h
src/http/srv/srvlet/: Server.h
src/http/srv/thpool/: Connection.cpp  Connection.h  Server.h
src/http/wget/: WG_Curl.cpp  WG_Curl.h  WG_Null.h
src/json/: ServiceDefinition.cpp  ServiceDefinition.h  ServiceQueryForm.cpp  ServiceQueryForm.hpp  ServiceQueryList.cpp  ServiceQueryList.hpp  ServiceRegistryEntry.cpp  ServiceRegistryEntry.hpp  System.cpp  System.h  common.h
src/modules/ServiceRegistry/: ServiceRegistry.cpp  ServiceRegistry.hpp
src/net/: HTTPHandler.cpp  HTTPHandler.h  KeyProvider.h  ReqBuilder.h
src/net/mhttp/: MHTTPHandler.cpp  MHTTPHandler.h
src/net/request/: ReqBuilderWCurl.cpp
src/utils/: assert.h  crypto.h  inifile.cpp  inifile.h  json.h  log.h  logger.h  parsers.cpp  parsers.h  pgetopt.cpp  pgetopt.h  traits.h
src/utils/common/: CommonJsonBuilder.h  CommonPayloads.h  DbWrapper.h  Error.h
src/utils/crypto/: sha256.h
src/utils/json/: JsonBuilder.h  JsonCView.h  JsonView.h
src/utils/logger/: spdlog_impl.h  syslog_impl.h
src/utils/traits/: Authorizer.h  CertAuthority.h  ServiceRegistry.h
test/: Makefile.am  README.md  main.cpp  test0001.cpp  test0002.cpp  test0051.cpp  test0052.cpp  test0053.cpp  test0054.cpp  test0055.cpp  test0056.cpp  test0057.cpp  test0058.cpp  test0059.cpp  test0093.cpp  test0100.cpp  test0102.cpp  test0103.cpp  test0104.cpp  test0105.cpp  test0106.cpp  test0108.cpp  test0109.cpp  test0111.cpp  test0112.cpp  test0114.cpp  test0115.cpp  test0117.cpp  test0118.cpp  test0120.cpp  test0121.cpp  test0123.cpp  test0124.cpp  test0125.cpp  test0126.cpp  test0127.cpp  test0129.cpp  test0130.cpp  test0132.cpp  test0133.cpp  (+10 more)
test/data/test0002/: db.ini
test/data/test0052/: tempsensor.txt
test/data/test0053/: c001.ini  c002.ini  c003.ini  c004.ini
test/data/test0059/: cert.der
test/data/test0093/: tempsensor.testcloud1.caCert.pem
test/data/test0117/: dev_registry.key  dev_registry.pem  sensor.key  sensor.pem  sysop.key  sysop.pem  testcloud2.key  testcloud2.pem
test/data/test0502/: tempsensor.testcloud1.private.key
test/data/test0502/key-store/: cert.pem
test/data/test0503/: tempsensor.testcloud1.publicCert.pem
test/data/test0503/key-store/: cert.key
test/data/test0503/trust-store/: ca.pem
test/hlpr/: HelperDB.h  JsonComp.h  MockCore.h  MockCurl.h  MockDBase.h  MockServlet.h  Sha256Dict.h
(+61 files in other folders)
